target added to links a href

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
             </h1>
             <div class="project-1-image-container transition-all duration-200 filter grayscale hover:grayscale-0">
                 <div class="project-1-image">
-                    <a href="https://www.geodesicdomes.ie/">
+                    <a href="https://www.geodesicdomes.ie/" target="_blank">
                         <img class=""  src="./assets/geodomes.svg" alt="picture of my first project, which is geodesic domes">
                     </a>
                 </div>
@@ -65,7 +65,7 @@
             </h1>
             <div class="project-2-image-container transition-all duration-200 filter grayscale hover:grayscale-0">
                 <div class="project-2-image">
-                    <a href="https://www.geodesicdomes.ie/">
+                    <a href="https://saltoft-ingenioer.netlify.app/" target="_blank">
                         <img class="" src="./assets/mmdfinalexam.svg" alt="image of the website of my final multimediadesign exam">
                     </a>
                 </div>
@@ -84,7 +84,7 @@
             </h1>
             <div class="project-3-image-container transition-all duration-200 filter grayscale hover:grayscale-0">
                 <div class="project-3-image">
-                    <a href="https://www.geodesicdomes.ie/">
+                    <a href="https://semesterprojekt-webdev-23-dqg9.vercel.app/landingpage" target="_blank">
                         <img class="" src="./assets/webdev1exam.svg" alt="image from the mock up of my first exam of my web developer education">
                     </a>
                 </div>
