added gengar as bg

--- a/src/index.html
+++ b/src/index.html
@@ -28,13 +28,17 @@
     </nav>
       
     <!-- Hero y-->
+    <div class="absolute flex justify-center items-center w-full h-full animate__animated animate__fadeIn">
+        <img class="w-auto h-2/4 " src="./assets/geng3.gif" alt="image of the pokemon gengar">
+    </div>
     <div class="h-screen flex justify-left justify-center flex-col">
-        <div class="text-9xl text-slate-300 animate__animated animate__fadeIn">
-            Web Dev
+        <div class="text-9xl flex text-slate-300 animate__animated animate__fadeIn">
+            Web Dev 
         </div>
         <div class="text-slate-300 animate__animated animate__fadeIn">
             Portfolio
         </div>
+
     </div>
 
     
