changes to gengar bg

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <nav class="fixed w-full z-20 top-0 start-0 p-5 lg:p-10">
         <div class="flex justify-end flex-wrap mx-auto">
             <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
+                <p class="text-slate-300 pr-5">Get in touch →</p>
                 <a href="https://github.com/Zulatan" target="_blank" class="px-5">
                     <img src="./assets/github.svg" alt="" class="hover:opacity-50">
                 </a>
@@ -28,15 +29,15 @@
     </nav>
       
     <!-- Hero y-->
-    <div class="absolute flex justify-center items-center w-full h-full animate__animated animate__fadeIn">
-        <img class="w-auto h-2/4 " src="./assets/geng3.gif" alt="image of the pokemon gengar">
+    <div class="absolute z-10 flex justify-center items-center w-full h-full animate__animated animate__fadeIn">
+        <img class="w-auto h-3/5 opacity-70" src="./assets/geng3.gif" alt="image of the pokemon gengar">
     </div>
     <div class="h-screen flex justify-left justify-center flex-col">
-        <div class="text-9xl flex text-slate-300 animate__animated animate__fadeIn">
-            Web Dev 
+        <div class="relative z-0 text-9xl text-slate-300 animate__animated animate__fadeIn">
+            Gengar welcomes you.
         </div>
         <div class="text-slate-300 animate__animated animate__fadeIn">
-            Portfolio
+            Mikkel Lau's Portfolio
         </div>
 
     </div>
