fuck tailwind xD

--- a/src/index.html
+++ b/src/index.html
@@ -29,12 +29,12 @@
     </nav>
       
     <!-- Hero y-->
-    <div class="absolute z-10 flex justify-center items-center w-full h-full animate__animated animate__fadeIn">
+    <div class="lg:absolute z-10 flex justify-center items-center w-full h-full animate__animated animate__fadeIn">
         <img class="w-auto h-3/5 opacity-70" src="./assets/geng3.gif" alt="image of the pokemon gengar">
     </div>
-    <div class="h-screen flex justify-left justify-center flex-col">
-        <div class="relative z-0 text-9xl text-slate-300 animate__animated animate__fadeIn">
-            Gengar welcomes you.
+    <div class="lg:h-screen flex justify-left justify-center flex-col">
+        <div class=" relative z-0 text-slate-300 animate__animated animate__fadeIn md:text-10xl">
+            <p class="text-2xl lg:text-10xl">Gengar welcomes you.</p>
         </div>
         <div class="text-slate-300 animate__animated animate__fadeIn">
             Mikkel Lau's Portfolio
